# MReader

./: .gitignore  CMakeLists.txt  ModelReader.cpp  ModelReader.h  README.md  main.cpp  main.qml
